syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/address.proto";
import "entities/conversation.proto";
option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message Customer {
  int32 id = 1;
  string code = 2;
  string full_name = 3;
  int32 company = 4;
  Address address = 5;
  string phone = 6;
  optional string email = 7;
  int32 orders = 8;
  float revenue = 9;
  optional Conversation conversation = 10;
}

message CustomerDetail {
  int32 id = 1;
  string code = 2;
  string full_name = 3;
  int32 company = 4;
  Address address = 5;
  string phone = 6;
  optional string email = 7;
  optional google.protobuf.Timestamp birthday = 8;
  optional string gender = 9;
  optional string title = 10;
  optional google.protobuf.Timestamp license_date = 11;
  optional string issued_by = 12;
  optional string contact_name = 13;
  optional string contact_title = 14;
  optional string contact_phone = 15;
  optional string contact_email = 16;
  optional Address contact_address = 17;
  optional string account_number = 18;
  optional string bank_name = 19;
  optional string bank_branch = 20;
  optional string license = 21;
  string user_created = 22;
  google.protobuf.Timestamp created_at = 23;
  optional string user_updated = 24;
  optional google.protobuf.Timestamp updated_at = 25;
}

enum MedicalRecordType {
  test = 0;
  patient = 1;
  diagnostic = 2;
}

message MedicalRecordLink {
  int32 id = 1; // serial
  string uuid = 2; // uuid
  MedicalRecordType type = 3;
  string type_name = 4; // medical_record_type
  string title = 5; // varchar
  string url = 6; // varchar
  int32 size = 7;
  int32 customer = 8; // serial
  optional string appointment_schedule = 9; // uuid
  int32 user_created = 10; // serial
  google.protobuf.Timestamp created_at = 11; // timestamp
}