syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "google/protobuf/timestamp.proto";

import "entities/app.proto";

message Role {
  int32 id = 1;
  string code = 2;
  string title = 3;
  optional string note = 4;
  int32 company = 5;
  int32 total_employee = 6;
  string user_created_name = 7;
  string user_updated_name = 8;
  google.protobuf.Timestamp created_at = 9;
  optional google.protobuf.Timestamp updated_at = 10;
}

message RoleItem {
  int32 id = 1;
  App app = 2;
  bool value = 3;
}