syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "entities/account.proto";
import "entities/company.proto";
import "entities/address.proto";

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

message UpdateCompanyDataRequest {
  optional string name = 1;
  optional string tax_code = 2;
  optional string phone = 3;
  optional string description = 4;
  optional string type = 5;
  optional google.protobuf.Timestamp time_open = 6;
  optional google.protobuf.Timestamp time_close = 7;
  optional int32 manager = 8;
  int32 id = 9;
  optional AddressPayload address = 10;
  optional bool is_active = 11;
}

message UpdateCompanyResponse {
  int32 code = 1;
  string message = 2;
  string message_trans = 3;
  string log = 4;
  int32 details = 5;
}